# py_app_to_notebook

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  pytest.ini  setup.py
.github/workflows/: cli_tests.yml  sample_app_tests.yml
py2databricks/: commands.py
py2databricks/files/: import_helper.py
py2databricks/models/: dependency.py  dependency_tree.py
py2databricks/module_importer/: py2dbrx_importer.py
py2databricks/utilities/: build_utils.py  dependencies.py  dir_utils.py
py_app_to_notebook/: commands.py
py_app_to_notebook/files/: import_helper.py
py_app_to_notebook/utilities/: build_utils.py  dependencies.py  dependency.py  dir.py  dir_utils.py
queue_to_s3_sample/: README.md  app.py  docker-compose.yml  pyproject.toml
queue_to_s3_sample/aws_helpers/: boto_helpers.py  s3.py  sqs.py
queue_to_s3_sample/tests/: conftest.py  test_app.py
queue_to_s3_sample/utilities/: boto_helpers.py
queue_to_s3_sample/utilities/s3/: s3_utils.py
queue_to_s3_sample/utilities/sqs/: sqs_utils.py
sample_application/: README.md  app.py  pyproject.toml
sample_application/utilities/: driver.py
sample_application/utilities/environment/: variables.py
sample_application/utilities/generators/: randoms.py
tests/: conftest.py  test_cli.py  test_commands.py
tests/models/: test_dependency_tree.py
tests/module_importer/: test_py2dbrx_importer.py
tests/utilities/: test_build_utils.py  test_dependencies.py  test_dependency.py  test_dir.py  test_dir_utils.py
