[tool.poetry]
name = "queue-to-s3-sample"
version = "0.1.0"
description = "This application serves as a sample for the `generate_notebook_application` module. This application simply pulls from an SQS queue and pushes it to S3."
authors = ["awhipp"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.29"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
