[tool.poetry]
name = "sample_application"
version = "0.1.0"
description = "This application serves as a sample for the `generate_notebook_application` module. This application just has a lot of random logic and imports."
authors = ["awhipp"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
